<?xml version="1.0" encoding="utf-8"?>
<!--
    Menu de navegación de la parte de administrativos de la aplicación.
    Contiene varios elementos, cada uno representa una sección.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_datos_administrativos"
            android:icon="@drawable/icono_datos"
            android:title="@string/menu_datos_administrativos" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/icono_usuario"
            android:title="@string/menu_usuarios" />
        <item
            android:id="@+id/nav_crear_usuarios"
            android:icon="@drawable/icono_add_usuario"
            android:title="@string/menu_add_usuarios" />
        <item
            android:id="@+id/nav_operadores"
            android:icon="@drawable/icono_operadores"
            android:title="@string/menu_operadores" />
        <item
            android:id="@+id/nav_incidencias"
            android:icon="@drawable/icono_incidencia"
            android:title="@string/menu_incidencias" />
    </group>
</menu>